--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saayangkuu Ainul Ma'rifah</title>
+     <!-- Open Graph -->
+     <meta property="og:title" content="For my dearest Ainul Ma'rifah" />
+     <meta property="og:description" content="May this day be filled with joy and memories..." />
+     <meta property="og:type" content="website" />
+     <meta property="og:url" content="https://annivainulmarifah.vercel.app/" />
+     <meta property="og:image" content="https://annivainulmarifah.vercel.app/og.png" />
+ 
+     <!-- Twitter Card -->
+     <meta name="twitter:card" content="summary_large_image" />
+     <meta name="twitter:title" content="For my dearest Ainul Ma'rifah," />
+     <meta name="twitter:description" content="May this day be filled with joy and memories..." />
+     <meta name="twitter:image" content="https://annivainulmarifah.vercel.app/og.png" />
   </head>
   <body>
     <div id="root"></div>
