tambah bahasa indonesia

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saayangkuu Ainul Ma'rifah</title>
      <!-- Open Graph -->
-     <meta property="og:title" content="For my dearest Ainul Ma'rifah" />
-     <meta property="og:description" content="May this day be filled with joy and memories..." />
+     <meta property="og:title" content="Untuk Ainul Ma'rifah tersayang❤️, Semoga hari ini dipenuhi dengan kebahagiaan dan kenangan😊... " />
+     <meta property="og:description" content="Dari Miftakul Azizi" />
      <meta property="og:type" content="website" />
      <meta property="og:url" content="https://annivainulmarifah.vercel.app/" />
      <meta property="og:image" content="https://annivainulmarifah.vercel.app/og.png" />
